# gcalc

./: pyproject.toml
gaiacalc/src/gaiacalc/: gaiacalc.py  loop.py  show.py  webserver.py
src/gaiacalc/: index.py  util.py
